# bundlewww

./: .env.example  .gitignore  Available Models and Price.csv  LICENSE  README.md  pyproject.toml  start.bat  start.sh
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  architect.py  constructor.py  illustrator.py  renderer.py
backend/app/models/: __init__.py  blueprint.py  events.py  project.py  schema.py
backend/app/services/: __init__.py  fal.py  openrouter.py  persistence.py
docs/: chapter_1.html  chapter_2.html  chapter_3.html  chapter_4.html  chapter_5.html  chapter_6.html  chapter_7.html  index.html  styles.css
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: BlueprintReview.css  BlueprintReview.jsx  PipelineProgress.css  PipelineProgress.jsx  ProjectCreate.css  ProjectCreate.jsx  ProjectList.css  ProjectList.jsx  ProjectView.css  ProjectView.jsx  WebsitePreview.css  WebsitePreview.jsx
